--- a/src/main/resources/templates/form/board/board.html
+++ b/src/main/resources/templates/form/board/board.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div>
         <label for="userId">작성자</label>
-        <input type="text" id="userId" name="userId" class="form-control" value="10" th:value="${member.userName}" readonly>
+        <input type="text" id="userId" name="userId" class="form-control" value="10" th:value="${member.name}" readonly>
     </div>
     <div>
         <label for="title">제목</label>
@@ -24,18 +24,24 @@
     <div>
         <label for="description">내용</label>
         <input type="text" id="description" name="description" class="form-control" value="내용"
-               th:value="${board.description}" readonly>
+               th:value="${board.content}" readonly>
     </div>
 
     <hr class="my-4">
 
     <div class="row">
-
+        <div class="col">
+            <button class="w-100 btn btn-primary btn-lg"
+                    onclick="location.href='editForm.html'"
+                    th:onclick="|location.href='@{/board/{memberId}/{boardId}/edit(memberId=${member.memberId}, boardId=${board.boardId})}'|"
+                    type="button">상품 수정
+            </button>
+        </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='items.html'"
-                    th:onclick="|location.href='@{/}'|"
-                    type="button">목록으로     <!-- 게시글 목록으로 가도록 수정 -->
+                    th:onclick="|location.href='@{/board/{memberId}(memberId=${member.memberId})}'|"
+                    type="button">목록으로
             </button>
         </div>
     </div>
