--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -24,15 +24,15 @@
                 <div class="board_write">
                     <div class="title">
                         <dl>
-                            <dt>TITLE</dt>
+                            <dt th:text="#{label.board.title}">TITLE</dt>
                             <label for="title">title</label>
-                            <input type="text" id="title" class="form-control" placeholder="title">
+                            <input type="text" id="title" th:field="*{title}" class="form-control" placeholder="title">
                         </dl>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <label for="writer">writer</label>
-                            <input type="text" id="writer" class="form-control" placeholder="who write/make it">
+                            <label for="writer" th:text="#{label.board.writer}">writer</label>
+                            <input type="text" id="writer" th:field="*{writer}"class="form-control" placeholder="who write/make it">
                         </div>
                         <div class="col">
                             <link href="/css/star.css" rel="stylesheet"/>
@@ -54,7 +54,8 @@
                         </div>
                         <hr class="my-4">
                         <div class="cont">
-                            <textarea id="content" class="form-control" placeholder="content">content</textarea>
+                            <textarea id="content" class="form-control" th:field="*{content}"
+                                      placeholder="content">content</textarea>
                         </div>
                     </div>
                 </div>
@@ -64,12 +65,12 @@
 
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">save</button>
+                    <button class="w-100 btn btn-primary btn-lg" th:text="#{button.save}"type="submit">save</button>
                 </div>
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
                             th:onclick="|location.href='@{/board/{memberId}(memberId=${member.memberId})}'|"
-                            onclick="location.href='main.html'" type="button">cancel
+                            onclick="location.href='main.html'" th:text="#{button.cancel}"type="button">cancel
                     </button>
                 </div>
             </div>
