--- a/src/main/resources/templates/form/board/main.html
+++ b/src/main/resources/templates/form/board/main.html
@@ -18,6 +18,7 @@
             <h3>March</h3>
         </div>
         <div class="col">
+            <!--memberId를 받아오지 않을 수 있을 때 링크 변경 필수-->
             <button class="btn btn-primary float-end"
                     th:onclick="|location.href='@{/board/{memberId}/add(memberId=${member.memberId})}'|"
                     onclick="location.href='write.html'"
@@ -31,25 +32,18 @@
         <table class="table">
             <thead>
             <tr>
-                <th>id</th>
-                <th>title</th>
-                <th>writer</th>
-                <th>grade</th>
+                <th th:text="#{label.board.title}">title</th>
+                <th th:text="#{label.board.writer}">writer</th>
+                <th th:text="#{label.board.rate}">rate</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td><a href="item.html" th:href="@{/board/{memberId}/1(memberId=${member.memberId})}">aaa</a></td>
+            <tr th:each="board : ${boards}">
                 <!-- th:href="@{/form/board/{memberId}/{boardId}(memberId=${member.memberId}, boardId=${board.boardId})}" -->
-                <td><a href="item.html" th:href="@{/board/{memberId}/1(memberId=${member.memberId})}">TITLE_1</a></td>
-                <td>writerA</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td><a href="item.html">bbb</a></td>
-                <td><a href="item.html">TITLE_2</a></td>
-                <td>writerB</td>
-                <td>9</td>
+                <td><a href="item.html" th:href="@{/board/board/{boardId}(boardId=${board.boardId})}"
+                       th:text="${board.title}">TITLE_1</a></td>
+                <td th:text="${board.writer}">writerA</td>
+                <td th:text="${board.rate}">10</td>
             </tr>
             </tbody>
         </table>
