--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -39,15 +39,15 @@
                             <p>rate</p>
                             <div class="mb-3" name="myform" id="myform">
                                 <fieldset>
-                                    <input type="radio" name="reviewStar" value="5" id="rate1"><label
+                                    <input type="radio" name="reviewStar" value="5" id="rate1" th:field="*{rate}"><label
                                         for="rate1">★</label>
-                                    <input type="radio" name="reviewStar" value="4" id="rate2"><label
+                                    <input type="radio" name="reviewStar" value="4" id="rate2" th:field="*{rate}"><label
                                         for="rate2">★</label>
-                                    <input type="radio" name="reviewStar" value="3" id="rate3"><label
+                                    <input type="radio" name="reviewStar" value="3" id="rate3" th:field="*{rate}"><label
                                         for="rate3">★</label>
-                                    <input type="radio" name="reviewStar" value="2" id="rate4"><label
+                                    <input type="radio" name="reviewStar" value="2" id="rate4" th:field="*{rate}"><label
                                         for="rate4">★</label>
-                                    <input type="radio" name="reviewStar" value="1" id="rate5"><label
+                                    <input type="radio" name="reviewStar" value="1" id="rate5" th:field="*{rate}"><label
                                         for="rate5">★</label>
                                 </fieldset>
                             </div>
