--- a/src/main/resources/templates/form/board/editForm.html
+++ b/src/main/resources/templates/form/board/editForm.html
@@ -72,7 +72,7 @@
                     <div class="col">
                         <button class="w-100 btn btn-secondary btn-lg"
                                 onclick="location.href='main.html'"
-                                th:onclick="|location.href='@{/board/{memberId}(memberId=${board.memberId})}'|"
+                                th:onclick="|location.href='@{/board}'|"
                                 type="button">cancel
                         </button>
                     </div>
