--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
-                            th:onclick="|location.href='@{/board/{memberId}(memberId=${member.memberId})}'|"
+                            th:onclick="|location.href='@{/board}'|"
                             onclick="location.href='main.html'" th:text="#{button.cancel}"type="button">cancel
                     </button>
                 </div>
