Feat: 게시글 상세 페이지 템플릿 수정

--- a/src/main/resources/static/css/star.css
+++ b/src/main/resources/static/css/star.css
@@ -23,6 +23,27 @@
 #myform input[type=radio]:checked ~ label{
     text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
 }
+
+#mydetailform fieldset{
+    display: inline-block;
+    direction: rtl;
+    border:0;
+}
+#mydetailform fieldset legend{
+    text-align: right;
+}
+#mydetailform input[type=radio]{
+    display: none;
+}
+#mydetailform label{
+    font-size: 1em;
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
+}
+
+#mydetailform input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
 #reviewContents {
     width: 100%;
     height: 150px;
