Feat: Controller 조회 구현

--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -32,7 +32,7 @@
                     <div class="row">
                         <div class="col">
                             <label for="writer" th:text="#{label.board.writer}">writer</label>
-                            <input type="text" id="writer" th:field="*{writer}"class="form-control" placeholder="who write/make it">
+                            <input type="text" id="writer" th:field="*{author}"class="form-control" placeholder="who write/make it">
                         </div>
                         <div class="col">
                             <link href="/css/star.css" rel="stylesheet"/>
