--- a/src/main/resources/templates/form/board/main.html
+++ b/src/main/resources/templates/form/board/main.html
@@ -40,7 +40,7 @@
             <tbody>
             <tr th:each="board : ${boards}">
                 <!-- th:href="@{/form/board/{memberId}/{boardId}(memberId=${member.memberId}, boardId=${board.boardId})}" -->
-                <td><a href="item.html" th:href="@{/board/board/{boardId}(boardId=${board.boardId})}"
+                <td><a href="item.html" th:href="@{/board/board/{boardId}(boardId=${board.id})}"
                        th:text="${board.title}">TITLE_1</a></td>
                 <td th:text="${board.author}">authorA</td>
                 <td th:text="${board.rate}">10</td>
