--- a/src/main/resources/templates/form/member/signInForm.html
+++ b/src/main/resources/templates/form/member/signInForm.html
@@ -22,7 +22,7 @@
         <h2>로그인</h2>
     </div>
 
-    <form action="index.html" th:action th:object="${signInForm}" method="post">
+    <form action="index.html" th:action th:object="${signInDto}" method="post">
         <div>
             <label for="email">이메일</label>
             <input type="email" id="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력하세요" th:errorclass="field-error">
