--- a/src/main/resources/templates/form/board/editForm.html
+++ b/src/main/resources/templates/form/board/editForm.html
@@ -23,22 +23,19 @@
             <form action="board.html" th:action th:object="${board}" method="post">
                 <div class="board_write">
                     <div class="title">
-                        <dl>
-                            <dt>TITLE</dt>
-                            <label for="title">title</label>
-                            <input type="text" id="title" value="title"
-                                   th:field="*{title}" class="form-control" placeholder="title">
-                        </dl>
+                        <label for="title" th:text="#{label.board.title}">title</label>
+                        <input type="text" id="title" value="title"
+                               th:field="*{title}" class="form-control" placeholder="title">
                     </div>
                     <div class="row">
                         <div class="col">
-                            <label for="writer">writer</label>
+                            <label for="writer" th:text="#{label.board.writer}">writer</label>
                             <input type="text" id="writer" value="aaa" class="form-control"
                                    th:field="*{author}" placeholder="who write/make it">
                         </div>
                         <div class="col">
                             <link href="/css/star.css" rel="stylesheet"/>
-                            <p>rate</p>
+                            <p th:text="#{label.board.rate}">rate</p>
                             <div class="mb-3" name="myform" id="myform" method="post">
                                 <fieldset>
                                     <input type="radio" name="reviewStar" value="5" id="rate1" th:field="*{rate}"><label
@@ -55,13 +52,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="isbn">
+                                <label for="title" th:text="#{label.board.imageLink}">title</label>
+                                <input type="text" id="isbn" th:field="*{isbn}" class="form-control"
+                                       placeholder="book image">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div>
+                                <a th:text="#{board.category}">category</a>
+                                <select th:field="*{dtype}" class="form-select" disabled>
+                                    <option value="B" th:text="#{board.category.book}">책</option>
+                                    <option value="M" th:text="#{board.category.movie}">영화</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                     <hr class="my-4">
-                    <div class="cont">
-                        <textarea id="content" value="content" class="form-control"
+                    <div class="cont" >
+                        <textarea id="content" value="content" class="form-control" th:text="#{label.board.content}"
                                   th:field="*{content}" placeholder="content">content</textarea>
                     </div>
                 </div>
-
                 <hr class="my-4">
 
                 <div class="row">
