Fix: BoardDto field 수정

--- a/src/main/resources/templates/form/board/board.html
+++ b/src/main/resources/templates/form/board/board.html
@@ -32,7 +32,7 @@
     <div class="row">
         <div class="col">
             <div style="float:left;margin-right: 20px;">
-                <h4 class="text-md-start" type="text" id="writer" name="writer" th:text="*{author}" readonly/>
+                <h4 class="text-md-start" type="text" id="writer" name="writer" th:text="*{creator}" readonly/>
             </div>
         </div>
         <div class="col">
