--- a/src/main/resources/templates/form/board/editForm.html
+++ b/src/main/resources/templates/form/board/editForm.html
@@ -31,7 +31,7 @@
                         <div class="col">
                             <label for="writer" th:text="#{label.board.writer}">writer</label>
                             <input type="text" id="writer" value="aaa" class="form-control"
-                                   th:field="*{author}" placeholder="who write/make it">
+                                   th:field="*{creator}" placeholder="who write/make it">
                         </div>
                         <div class="col">
                             <link href="/css/star.css" rel="stylesheet"/>
