--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -30,7 +30,7 @@
                     <div class="row">
                         <div class="col">
                             <label for="writer" th:text="#{label.board.writer}">writer</label>
-                            <input type="text" id="writer" th:field="*{author}"class="form-control" placeholder="who write/make it">
+                            <input type="text" id="writer" th:field="*{creator}"class="form-control" placeholder="who write/make it">
                         </div>
                         <!-- change.made-->
                         <div class="col">
@@ -53,13 +53,6 @@
                         </div>
                         <!-- change.imageLink -->
                         <div class="row">
-                            <div class="col">
-                                <div class="isbn">
-                                    <label for="title" th:text="#{label.board.imageLink}">title</label>
-                                    <input type="text" id="isbn" th:field="*{isbn}" class="form-control"
-                                           placeholder="book image">
-                                </div>
-                            </div>
                             <!-- change.imageLink -->
                             <div class="col">
                                 <div>
