Feat: 도서 검색 기능 이미지 추가

--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -99,7 +99,7 @@
                 </div>
                 <div id="nav">
                     <a>FILE URL</a>
-                    <input th:field="*{imageURL}" class="form-control" placeholder="search Link"/>
+                    <input th:field="*{imageURL}" class="form-control" placeholder="search Link" id="add_form_imageURL"/>
                 </div>
             </div>
         </form>
