FEAT: movieController 추가

--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -47,8 +47,8 @@
                         <!-- change.made -->
                         <div class="row">
                             <div class="col">
-                                <label for="add_form_writer" th:text="#{label.board.writer}">writer</label>
-                                <input type="text" id="add_form_writer" th:field="*{creator}"class="form-control" placeholder="who write/make it">
+                                <label for="add_form_creator" th:text="#{label.board.writer}">writer</label>
+                                <input type="text" id="add_form_creator" th:field="*{creator}"class="form-control" placeholder="who write/make it">
                             </div>
                             <!-- change.made-->
                             <div class="col">
